funciona login goooooooggleeeeeeeeee con mapa

--- a/front/src/components/LogInForm/LogInForm.css
+++ b/front/src/components/LogInForm/LogInForm.css
@@ -323,3 +323,9 @@ form {
     right: 0;
     height: 1px;
 }
+
+.google-login-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
